--- a/package.json
+++ b/package.json
@@ -1,16 +1,39 @@
 {
   "name": "the-rosa",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "gsap.js",
+  "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --w scss -o css --recursive"
+    "scss": "node-sass --w src/scss -o src/css"
   },
   "keywords": [],
   "author": "dreywesson",
   "license": "ISC",
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "bootstrap": "^4.3.1",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "popper.js": "^1.14.7",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
+  },
   "dependencies": {
+    "clean-webpack-plugin": "^2.0.0",
+    "font-awesome-loader": "^1.0.2",
     "node-sass": "^4.14.1"
   }
 }
