--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass --w src/scss -o src/css"
   },
   "keywords": [],
   "author": "dreywesson",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "bootstrap": "^4.3.1",
+    "babel-loader": "^8.1.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "popper.js": "^1.14.7",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.44.1",
@@ -32,8 +32,6 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^2.0.0",
-    "font-awesome-loader": "^1.0.2",
-    "node-sass": "^4.14.1"
+    "clean-webpack-plugin": "^2.0.0"
   }
 }
