--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "img-loader": "^3.0.1",
+    "jimp": "^0.16.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "responsive-loader": "^2.1.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.44.1",
@@ -32,6 +35,15 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^2.0.0"
+    "clean-webpack-plugin": "^2.0.0",
+    "critical": "^2.0.4",
+    "critical-css-webpack-plugin": "^0.2.0",
+    "html-srcsets-loader": "^0.5.1",
+    "imagemin": "^7.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.1",
+    "imagemin-svgo": "^8.0.0"
   }
 }
