--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -26,13 +27,17 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.32",
+    "postcss-loader": "^4.0.1",
     "responsive-loader": "^2.1.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-image-resize-loader": "^3.0.0",
+    "webpack-merge": "^4.2.1",
+    "webpack-query-loader": "^2.0.3"
   },
   "dependencies": {
     "clean-webpack-plugin": "^2.0.0",
@@ -44,6 +49,7 @@
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-pngquant": "^9.0.1",
-    "imagemin-svgo": "^8.0.0"
+    "imagemin-svgo": "^8.0.0",
+    "webpack-image-srcset-loader": "^3.0.0"
   }
 }
