--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.32",
     "postcss-loader": "^4.0.1",
+    "purgecss-webpack-plugin": "^2.3.0",
     "responsive-loader": "^2.1.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
